--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<div class="main-page">
-  <h1>
-    Welcome to myMusicalFlix!
-  </h1>
-  <button mat-raised-button (click)="openUserRegistrationDialog()" style="margin-right: 10px;" color="primary">
-    Sign Up
-  </button>
-  <button mat-raised-button (click)="openUserLoginDialog()" color="primary">
-    Sign In
-  </button>
-</div>
+<router-outlet></router-outlet>
