--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -6,14 +6,15 @@
         </mat-card-header>
         <img src={{movie.ImagePath}} alt={{movie.Title}} />
         <mat-card-actions>
-            <button mat-button color="primary">
+            <button mat-button color="primary" (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)">
                 Genre
             </button>
             <button mat-button color="primary">
                 Directors
             </button>
-            <button mat-button color="primary">
-                Synopsis
+            <button mat-button color="primary"
+                (click)="openDetailsDialog(movie.Title, movie.ReleaseYear, movie.Description)">
+                Description
             </button>
             <mat-icon>favorite_border</mat-icon>
         </mat-card-actions>
