Attempt to add director component - unable to extract data from Directors array - need to transform data in component to extract director object(s) from Directors array - pipes? - OR manipulate data in getDirectors service to send extracted director data to component for easier management

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -9,7 +9,7 @@
             <button mat-button color="primary" (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)">
                 Genre
             </button>
-            <button mat-button color="primary">
+            <button mat-button color="primary" (click)="openDirectorsDialog(movie.Director.Name)">
                 Directors
             </button>
             <button mat-button color="primary"
