--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,22 +1,32 @@
-<div style="display: flex;">
-    <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
-        <mat-card-header>
-            <mat-card-title>{{movie.Title}}</mat-card-title>
-            <mat-card-subtitle>{{movie.ReleaseYear | date:'yyyy'}}</mat-card-subtitle>
-        </mat-card-header>
-        <img src={{movie.ImagePath}} alt={{movie.Title}} />
-        <mat-card-actions>
-            <button mat-button color="primary" (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)">
-                Genre
-            </button>
-            <button mat-button color="primary" (click)="openDirectorsDialog(movie.Director.Name)">
-                Directors
-            </button>
-            <button mat-button color="primary"
-                (click)="openDetailsDialog(movie.Title, movie.ReleaseYear, movie.Description)">
-                Description
-            </button>
-            <mat-icon>favorite_border</mat-icon>
-        </mat-card-actions>
-    </mat-card>
+<div>
+    <div>
+        <button mat-button color="primary" routerLink="/movies">
+            myMusicalFlix
+        </button>
+        <button mat-button color="primary" routerLink="/profile">
+            Profile
+        </button>
+    </div>
+    <div style="display: flex;">
+        <mat-card *ngFor="let movie of movies;" style="flex: 1 1 auto;">
+            <mat-card-header>
+                <mat-card-title>{{movie.Title}}</mat-card-title>
+                <mat-card-subtitle>{{movie.ReleaseYear | date:'yyyy'}}</mat-card-subtitle>
+            </mat-card-header>
+            <img src={{movie.ImagePath}} alt={{movie.Title}} />
+            <mat-card-actions>
+                <button mat-button color="primary" (click)="openGenreDialog(movie.Genre.Name, movie.Genre.Description)">
+                    Genre
+                </button>
+                <button mat-button color="primary" (click)="openDirectorsDialog(movie.Director.Name)">
+                    Directors
+                </button>
+                <button mat-button color="primary"
+                    (click)="openDetailsDialog(movie.Title, movie.ReleaseYear, movie.Description)">
+                    Description
+                </button>
+                <mat-icon>favorite_border</mat-icon>
+            </mat-card-actions>
+        </mat-card>
+    </div>
 </div>
