Display favourite movies in user profile, attempt user delete component - user delete request returns 404 error - styling updates, improve responsive design

--- a/src/app/movie-actors/movie-actors.component.html
+++ b/src/app/movie-actors/movie-actors.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex">
+<div style="display: flex; flex-flow: column wrap;">
     <mat-card *ngFor="let Actor of data.Actors;">
         <mat-card-header>
             <mat-card-title>{{Actor.Name}}</mat-card-title>
