--- a/src/app/movie-directors/movie-directors.component.html
+++ b/src/app/movie-directors/movie-directors.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex">
+<div style="display: flex; flex-flow: column wrap;">
     <mat-card *ngFor="let Director of data.Directors;">
         <mat-card-header>
             <mat-card-title>{{Director.Name}}</mat-card-title>
