--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,15 @@
 <mat-toolbar style="position: sticky; width: 100%; background-color: #f6a291;">
-    <span routerLink="/movies">
-        myMusicalFlix
+    <span>
+        <button mat-button routerLink="/movies" style="font-size: 20px;">
+            myMusicalFlix
+        </button>
     </span>
     <span style="flex: 1 1 auto;">
-        <button mat-button routerLink="/profile" style="float: right;">
-            Profile
-        </button>
-        <button mat-button (click)="logoutUser()" routerLink="/" style="float: right;">
+        <button mat-button (click)="logoutUser()" routerLink="/" style="float: right; font-size: 16px;">
             Sign Out
+        </button>
+        <button mat-button routerLink="/profile" style="float: right; font-size: 16px;">
+            Profile
         </button>
     </span>
 </mat-toolbar>
