--- a/src/app/movie-genre/movie-genre.component.html
+++ b/src/app/movie-genre/movie-genre.component.html
@@ -1,4 +1,10 @@
 <div>
-    <h1>{{data.Name}}</h1>
-    <p>{{data.Description}}</p>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>{{data.Name}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <p>{{data.Description}}</p>
+        </mat-card-content>
+    </mat-card>
 </div>
