--- a/src/app/welcome-page/welcome-page.component.html
+++ b/src/app/welcome-page/welcome-page.component.html
@@ -1,5 +1,5 @@
-<div class="main-page">
-    <h1>
+<div class="main-page" style="margin: 5rem auto; text-align: center;">
+    <h1 style="font-size: 30px; margin-bottom: 3rem;">
         Welcome to myMusicalFlix!
     </h1>
     <button mat-raised-button (click)="openUserRegistrationDialog()" style="margin-right: 10px;" color="primary">
